--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ on:
     branches: [main] 
   pull_request:
     branches: [main]
-Jobs:
+    
+jobs:
   build:
     runs-on: ubuntu-latest
 
@@ -13,17 +14,20 @@ Jobs:
       matrix:
         node-version: [12.x]
         
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js ${{ matrix.node-version }} 
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
-      run: npm install
-    - name: Run the tests
-      run: npm test
-    - name: Build
-      run: npm run build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+  
+      - name: Set up Node.js ${{ matrix.node-version }} 
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+          
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Run the tests
+        run: npm test
+        
+      - name: Build
+        run: npm run build
