--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,12 @@ jobs:
           
       - name: Install dependencies
         run: npm install
-        
+        working-directory: ./CISE_Repose # Update this with the actual relative path
+
       - name: Run the tests
         run: npm test
+        working-directory: ./CISE_Repose # Update this with the actual relative path
         
       - name: Build
         run: npm run build
+        working-directory: ./CISE_Repose # Update this with the actual relative path
